// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadAssetDialog from computer snapshots the component 1`] = `
.c1 {
  padding-right: 40px;
  padding-left: 40px;
  position: fixed;
  z-index: 4;
}

.c4 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
  width: 51.875rem;
}

.c5 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c10 {
  background: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c13 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c15 {
  padding: 16px;
}

.c20 {
  background: #eaeaef;
}

.c22 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c23 {
  background: #f6f6f9;
  padding-top: 64px;
  padding-bottom: 64px;
  border-radius: 4px;
  border-color: #c0c0cf;
  border: 1px solid #c0c0cf;
  position: relative;
}

.c28 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c30 {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
  width: 100%;
}

.c32 {
  position: relative;
}

.c33 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c17 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c19 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c29 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #666687;
}

.c36 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 0;
  color: #ffffff;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c25 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c34 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c11 {
  position: relative;
  outline: none;
}

.c11 > svg {
  height: 12px;
  width: 12px;
}

.c11 > svg > g,
.c11 > svg path {
  fill: #ffffff;
}

.c11[aria-disabled='true'] {
  pointer-events: none;
}

.c11:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c11:focus-visible {
  outline: none;
}

.c11:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c35 {
  height: 2rem;
}

.c35[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true'] .c8 {
  color: #666687;
}

.c35[aria-disabled='true'] svg > g,.c35[aria-disabled='true'] svg path {
  fill: #666687;
}

.c35[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c35[aria-disabled='true']:active svg > g,.c35[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c35:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c35:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c35 svg > g,
.c35 svg path {
  fill: #ffffff;
}

.c38 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c38[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c38[aria-disabled='true'] .c8 {
  color: #666687;
}

.c38[aria-disabled='true'] svg > g,.c38[aria-disabled='true'] svg path {
  fill: #666687;
}

.c38[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c38[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c38[aria-disabled='true']:active svg > g,.c38[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c38:hover {
  background-color: #f6f6f9;
}

.c38:active {
  background-color: #eaeaef;
}

.c38 .c8 {
  color: #32324d;
}

.c38 svg > g,
.c38 svg path {
  fill: #32324d;
}

.c21 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c12 svg > g,
.c12 svg path {
  fill: #8e8ea9;
}

.c12:hover svg > g,
.c12:hover svg path {
  fill: #666687;
}

.c12:active svg > g,
.c12:active svg path {
  fill: #a5a5ba;
}

.c12[aria-disabled='true'] svg path {
  fill: #666687;
}

.c3 {
  background: #32324d1F;
  inset: 0;
}

.c6 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c37 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c16 {
  border-bottom: 2px solid #4945ff;
}

.c18 {
  border-bottom: 2px solid transparent;
}

.c14[aria-disabled='true'] {
  cursor: not-allowed;
}

.c26 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c27 {
  font-size: 3.75rem;
}

.c27 svg path {
  fill: #4945ff;
}

.c24 {
  border-style: dashed;
}

.c31 {
  opacity: 0;
  cursor: pointer;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    class=""
  >
    <div
      class="c1 c2 c3"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c4"
            role="dialog"
          >
            <div
              class="c5 c6"
            >
              <div
                class="c7"
              >
                <h2
                  class="c8 c9"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c10 c2 c11 c12"
                  type="button"
                >
                  <span
                    class="c0"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417 21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417Z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c13"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-controls="0-0-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c14"
                    id="0-0-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c15 c16"
                    >
                      <span
                        class="c8 c17"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c14"
                    id="0-1-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c15 c18"
                    >
                      <span
                        class="c8 c19"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c20 c21"
                />
              </div>
              <div>
                <div
                  aria-labelledby="0-0-tab"
                  id="0-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c22"
                    >
                      <label>
                        <div
                          class="c23 c24"
                        >
                          <div
                            class="c2"
                          >
                            <div
                              class="c25 c26"
                            >
                              <div
                                class="c27"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 24 20"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M21.569 2.398H7.829v1.586h13.74c.47 0 .826.5.826 1.094v9.853l-2.791-3.17a2.13 2.13 0 0 0-.74-.55 2.214 2.214 0 0 0-.912-.196 2.215 2.215 0 0 0-.912.191 2.131 2.131 0 0 0-.74.546l-2.93 3.385-2.973-3.36a2.147 2.147 0 0 0-.741-.545 2.228 2.228 0 0 0-1.824.007c-.286.13-.538.319-.739.553l-2.931 3.432V7.653H2.51v9.894c.023.153.06.304.108.452v.127l.041.095c.057.142.126.28.207.412l.099.15c.074.107.157.207.247.302l.124.119c.13.118.275.222.43.309h.024c.36.214.775.327 1.198.325h16.515c.36-.004.716-.085 1.039-.24.323-.153.606-.375.827-.648a2.78 2.78 0 0 0 .504-.888c.066-.217.108-.44.124-.666V5.078a2.497 2.497 0 0 0-.652-1.81 2.706 2.706 0 0 0-1.776-.87Z"
                                    fill="#32324D"
                                  />
                                  <path
                                    d="M12.552 9.199c.912 0 1.651-.71 1.651-1.585 0-.876-.74-1.586-1.651-1.586-.912 0-1.652.71-1.652 1.586 0 .875.74 1.585 1.652 1.585ZM3.303 6.408h.826V3.997h2.477V2.41H4.129V0h-.826c-.219 0-.85.002-.826 0v2.411H0v1.586h2.477v2.41h.826Z"
                                    fill="#32324D"
                                  />
                                </svg>
                              </div>
                              <div
                                class="c28"
                              >
                                <span
                                  class="c8 c29"
                                >
                                  Drag & Drop here or
                                </span>
                              </div>
                              <input
                                class="c30 c31"
                                multiple=""
                                name="files"
                                tabindex="-1"
                                type="file"
                              />
                              <div
                                class="c32"
                              >
                                <button
                                  aria-disabled="false"
                                  class="c33 c34 c11 c35"
                                  type="button"
                                >
                                  <span
                                    class="c8 c36"
                                  >
                                    Browse files
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="c5 c37"
                    >
                      <div
                        class="c7"
                      >
                        <div
                          class="c34"
                        >
                          <button
                            aria-disabled="false"
                            class="c33 c34 c11 c38"
                            type="button"
                          >
                            <span
                              class="c8 c36"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c34"
                        />
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UploadAssetDialog from url snapshots the component 1`] = `
.c1 {
  padding-right: 40px;
  padding-left: 40px;
  position: fixed;
  z-index: 4;
}

.c4 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
  width: 51.875rem;
}

.c5 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c10 {
  background: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c13 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c15 {
  padding: 16px;
}

.c20 {
  background: #eaeaef;
}

.c22 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c33 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c26 {
  border-radius: 4px;
  border-color: #dcdce4;
  border: 1px solid #dcdce4;
}

.c28 {
  font-size: 0.875rem;
  background: #ffffff;
  color: #32324d;
  padding: 16px;
  border-radius: 4px;
  width: 100%;
  height: 6.5625rem;
  line-height: 4;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c19 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c17 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c35 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 0;
  color: #ffffff;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c30 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c11 {
  position: relative;
  outline: none;
}

.c11 > svg {
  height: 12px;
  width: 12px;
}

.c11 > svg > g,
.c11 > svg path {
  fill: #ffffff;
}

.c11[aria-disabled='true'] {
  pointer-events: none;
}

.c11:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c11:focus-visible {
  outline: none;
}

.c11:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c36 {
  height: 2rem;
}

.c36[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c36[aria-disabled='true'] .c8 {
  color: #666687;
}

.c36[aria-disabled='true'] svg > g,.c36[aria-disabled='true'] svg path {
  fill: #666687;
}

.c36[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c36[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c36[aria-disabled='true']:active svg > g,.c36[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c36:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c36:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c36 svg > g,
.c36 svg path {
  fill: #ffffff;
}

.c34 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c34[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c34[aria-disabled='true'] .c8 {
  color: #666687;
}

.c34[aria-disabled='true'] svg > g,.c34[aria-disabled='true'] svg path {
  fill: #666687;
}

.c34[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c34[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c34[aria-disabled='true']:active svg > g,.c34[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c34:hover {
  background-color: #f6f6f9;
}

.c34:active {
  background-color: #eaeaef;
}

.c34 .c8 {
  color: #32324d;
}

.c34 svg > g,
.c34 svg path {
  fill: #32324d;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c12 svg > g,
.c12 svg path {
  fill: #8e8ea9;
}

.c12:hover svg > g,
.c12:hover svg path {
  fill: #666687;
}

.c12:active svg > g,
.c12:active svg path {
  fill: #a5a5ba;
}

.c12[aria-disabled='true'] svg path {
  fill: #666687;
}

.c3 {
  background: #32324d1F;
  inset: 0;
}

.c6 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c31 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c18 {
  border-bottom: 2px solid #4945ff;
}

.c16 {
  border-bottom: 2px solid transparent;
}

.c14[aria-disabled='true'] {
  cursor: not-allowed;
}

.c27 {
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c27:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c29 {
  border: none;
  resize: none;
}

.c29::-webkit-input-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c29::-moz-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c29:-ms-input-placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c29::placeholder {
  color: #8e8ea9;
  font-size: 0.875rem;
  color: #8e8ea9;
  opacity: 1;
}

.c29:focus-within {
  outline: none;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    class=""
  >
    <div
      class="c1 c2 c3"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c4"
            role="dialog"
          >
            <div
              class="c5 c6"
            >
              <div
                class="c7"
              >
                <h2
                  class="c8 c9"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c10 c2 c11 c12"
                  type="button"
                >
                  <span
                    class="c0"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417 21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417Z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c13"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c14"
                    id="32-0-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c15 c16"
                    >
                      <span
                        class="c8 c17"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-controls="32-1-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c14"
                    id="32-1-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c15 c18"
                    >
                      <span
                        class="c8 c19"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c20 c21"
                />
              </div>
              <div>
                <div
                  aria-labelledby="32-1-tab"
                  id="32-1-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form
                    action="#"
                    novalidate=""
                  >
                    <div
                      class="c22"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c23"
                        >
                          <label
                            class="c8 c24 c25"
                            for="urls"
                          >
                            URL
                          </label>
                          <div
                            class="c26 c27"
                          >
                            <textarea
                              aria-describedby="urls-hint"
                              aria-invalid="false"
                              aria-required="false"
                              class="c28 c29"
                              font-size="2"
                              id="urls"
                            />
                          </div>
                          <p
                            class="c8 c30"
                            id="urls-hint"
                          >
                            Separate your URL links by a carriage return.
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c5 c31"
                    >
                      <div
                        class="c7"
                      >
                        <div
                          class="c32"
                        >
                          <button
                            aria-disabled="false"
                            class="c33 c32 c11 c34"
                            type="button"
                          >
                            <span
                              class="c8 c35"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c32"
                        >
                          <button
                            aria-disabled="false"
                            class="c33 c32 c11 c36"
                            type="submit"
                          >
                            <span
                              class="c8 c35"
                            >
                              Next
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
